erDiagram
    USER ||--o{ ACCOUNT : accounts
    PLATFORM ||--o{ ACCOUNT: a
    USER||--o{ TRANSACTION: a
    ACCOUNT||--o{ TRANSACTION: a
    USER ||--o{ USER_COMMUNITY: a
    COMMUNITY ||--o{ USER_COMMUNITY: a
    


    USER {
        UUID id
        String name
        String lastname
        String username
        Email email
        String password
        Bool terms
        Bool notification
    }
    ACCOUNT {
        UUID id
        UUID platformId 
        UUID userId
        Numeric balance
        KEY appikey
    }
    PLATFORM {
        UUID id
        string name
    }
    TRANSACTION {
        UUID userId
        UUID accountId
        Nuemric ammount
        Bool Sale-Buy
        Date timeStamp

    }
    USER_COMMUNITY{
        UUID userId
        UUID communityId
        String Role
    }
    COMMUNITY {
        UUID id
        String name
        String description
        String image
        String rules
        Enum type
        Enum tags
    }